--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,9 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+
+
+
+    <string name="verify_note">To get access to missal readings, prayers and lots more, kindly log in with your mobile number.</string>
+    <string name="code_instructions">Your details would never be shared</string>
 </resources>
