all functionality with fcm push noti,phone auth with  UI except login and splash

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,12 @@
     <string name="app_name">Medi Help</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
+    <string-array name="unit">
+        <item>Pill</item>
+        <item>ML</item>
+        <item>Spoon</item>
+        <item>Drop</item>
+    </string-array>
     <string-array name="frequency">
         <item>Everyday</item>
         <item>Specific Days</item>
